fixed social icons visibility

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -129,7 +129,7 @@ nav .cta{
     height: 100vh;
     background-color: #0066FF;
     z-index: 100!important;
-    padding: 20px;
+    padding: 20px 20px 40px 20px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
